<resources>
    <string name="app_name">keyuangongshang</string>
    <string name="btn_sure">确认</string>
    <!-- 首页-->
    <string name="tab_home_txt">粤商通</string>
    <string name="tab_message_txt">消息</string>
    <string name="tab_contans_txt">通讯录</string>
    <string name="tab_mine_txt">我的</string>

    <!--登录，注册-->
    <string name="login_txt_1">请输入您的手机号</string>
    <string name="login_txt_2">请输入你的密码</string>
    <string name="login_txt_3">登录</string>
    <string name="login_txt_4">注册</string>
    <string name="login_txt_5">忘记密码</string>
    <string name="login_txt_6">第三方登录</string>
    <string name="login_txt_7">请输入短信验证码</string>
    <string name="login_txt_8">获取验证码</string>
    <string name="login_txt_9">请输入新的登录密码</string>
    <string name="login_txt_10">登录</string>
    <string name="login_txt_11">注册账号</string>
</resources>
