<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.dlc.base.BaseUi.BaseWidget.TitleBar
        android:id="@+id/titleBear"
        android:layout_width="match_parent"
        android:layout_height="90px"
        app:showLeftImage="true">
    </com.dlc.base.BaseUi.BaseWidget.TitleBar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250px">
        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:src="@mipmap/ic_add_01"/>
    </FrameLayout>
    
    <EditText
        android:id="@+id/mobile"
        style="@style/login_txt"
        android:hint="@string/login_txt_1"
        android:layout_marginTop="60px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:layout_marginTop="20px"
        android:background="@drawable/txt_shap_grey_line">

        <EditText
            android:id="@+id/identifying_code"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textColorHint="@color/tab_text_nor"
            android:textColor="@color/tab_text_nor"
            android:textSize="28px"
            android:paddingLeft="24px"
            android:hint="@string/login_txt_7"
            />
        <TextView
            android:id="@+id/get_code"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:background="@drawable/btn_shap_yellow_full"
            android:textColor="@color/tab_text_nor"
            android:textSize="28px"
            android:layout_gravity="center_vertical"
            android:layout_margin="10px"
            android:gravity="center"
            android:hint="@string/login_txt_8"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/new_password"
        style="@style/login_txt"
        android:hint="@string/login_txt_9"
        android:layout_marginTop="20px"
        />

    <Button
        android:id="@+id/btn_sure"
        style="@style/btn"
        android:layout_marginTop="32px"
        android:text="@string/btn_sure"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="38px"
                android:textSize="24px"
                android:textColor="@color/tab_text_pre"
                android:gravity="center"
                android:text="@string/login_txt_3"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/tab_text_nor"/>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/resetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38px"
                android:textSize="24px"
                android:textColor="@color/tab_text_nor"
                android:gravity="center"
                android:text="@string/login_txt_11"
                />
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>