<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.dlc.base.BaseUi.BaseWidget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="90px">
    </com.dlc.base.BaseUi.BaseWidget.TitleBar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250px">
        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:src="@mipmap/ic_add_01"/>
    </FrameLayout>
    
    <EditText
        android:id="@+id/mobile"
        style="@style/login_txt"
        android:hint="@string/login_txt_1"
        android:layout_marginTop="60px"
        />
    <EditText
        android:id="@+id/password"
        style="@style/login_txt"
        android:hint="@string/login_txt_2"
        android:layout_marginTop="20px"
        />

    <Button
        style="@style/btn"
        android:layout_marginTop="32px"
        android:text="@string/login_txt_3"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="38px"
                android:textSize="24px"
                android:textColor="@color/tab_text_pre"
                android:gravity="center"
                android:text="@string/login_txt_4"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/tab_text_nor"/>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/forget_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38px"
                android:textSize="24px"
                android:textColor="@color/tab_text_pre"
                android:gravity="center"
                android:text="@string/login_txt_5"
                />
            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50px">
            <include layout="@layout/include_third_party_login"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>